[gd_scene load_steps=11 format=3 uid="uid://ch23ufr1x5ey4"]

[ext_resource type="Script" uid="uid://xh0b53odsbj7" path="res://scenes/ui/ui.gd" id="1_d3qyf"]
[ext_resource type="Texture2D" uid="uid://c8675s2tt1wxe" path="res://assets/art/ui/avatars/avatar-punk.png" id="1_gbxrk"]
[ext_resource type="Texture2D" uid="uid://cluq1t10attca" path="res://assets/art/ui/avatars/avatar-player.png" id="2_7xg5p"]
[ext_resource type="PackedScene" uid="uid://bxlh1wahgqqe7" path="res://scenes/ui/healthbar.tscn" id="3_afvqa"]
[ext_resource type="PackedScene" uid="uid://c0xjjoqb6n8wi" path="res://scenes/ui/combo_indicator.tscn" id="5_v1jss"]
[ext_resource type="PackedScene" uid="uid://dlkev2s84x4xv" path="res://scenes/ui/score_indicator.tscn" id="6_hdap0"]
[ext_resource type="PackedScene" uid="uid://dv7as7fmjbxt8" path="res://scenes/ui/flickering_texture_rect.tscn" id="7_w57sk"]
[ext_resource type="Texture2D" uid="uid://bflpnyksqncyx" path="res://assets/art/ui/go-go-go.png" id="8_ac4e1"]
[ext_resource type="PackedScene" uid="uid://bqlb1fe1iug3c" path="res://scenes/ui/stage_transition.tscn" id="9_uegxj"]
[ext_resource type="PackedScene" uid="uid://ct43q12y3h8mk" path="res://scenes/ui/dialogue_text.tscn" id="10_y220t"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_d3qyf")
duration_healthbar_visible = 1000

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyAvatar" type="TextureRect" parent="UIContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_right = -11.0
offset_bottom = 11.0
grow_horizontal = 0
scale = Vector2(2, 2)
texture = ExtResource("1_gbxrk")
stretch_mode = 2

[node name="PlayerAvatar" type="TextureRect" parent="UIContainer"]
layout_mode = 1
offset_right = 11.0
offset_bottom = 11.0
scale = Vector2(2, 2)
texture = ExtResource("2_7xg5p")
stretch_mode = 2

[node name="PlayerHealthbar" parent="UIContainer" instance=ExtResource("3_afvqa")]
offset_left = 24.0
offset_top = 14.0
offset_right = 54.0
offset_bottom = 18.0

[node name="EnemyHealthbar" parent="UIContainer" instance=ExtResource("3_afvqa")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 14.0
offset_right = -22.0
offset_bottom = 18.0
grow_horizontal = 0
is_inverted = true

[node name="WhiteBorder" parent="UIContainer/EnemyHealthbar" index="0"]
layout_direction = 3
scale = Vector2(-30, 1)

[node name="ContentBackground" parent="UIContainer/EnemyHealthbar" index="1"]
layout_direction = 3
scale = Vector2(-28, 1)

[node name="HealthGauge" parent="UIContainer/EnemyHealthbar" index="2"]
layout_direction = 3
scale = Vector2(-10, 1)

[node name="ComboIndicator" parent="UIContainer" instance=ExtResource("5_v1jss")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -7.0
offset_right = 22.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12

[node name="ScoreIndicator" parent="UIContainer" instance=ExtResource("6_hdap0")]
layout_mode = 0
offset_left = 24.0
offset_top = 2.0
offset_right = 59.0
offset_bottom = 14.0
points_per_life = 1000

[node name="GoIndicator" parent="UIContainer" instance=ExtResource("7_w57sk")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = 22.0
offset_right = -16.0
offset_bottom = 38.0
grow_horizontal = 0
scale = Vector2(2, 2)
texture = ExtResource("8_ac4e1")
stretch_mode = 2

[node name="StageTransition" parent="UIContainer" instance=ExtResource("9_uegxj")]
layout_mode = 1
scale = Vector2(2, 2)

[node name="DialogueText" parent="UIContainer" instance=ExtResource("10_y220t")]
layout_mode = 1
offset_left = 3.0
offset_top = 76.0
offset_right = -1.0
offset_bottom = -6.0

[editable path="UIContainer/EnemyHealthbar"]
